Bug 1721868: Fixing alignment of reports -> config -> columns labels
behatnotneeded

--- a/htdocs/theme/raw_old/sass/_custom.scss
+++ b/htdocs/theme/raw_old/sass/_custom.scss
@@ -512,6 +512,13 @@
     }
     .checkbox.form-group {
         padding: 10px 0;
+        label {
+            padding-left: 20px;
+            display: inline;
+        }
+        input[type=checkbox] {
+            float: left;
+        }
     }
 }
 
